# Aurus

./: README.md  test_nim.py  test_prompt.py
aurus_reasoning/: configs  data  pyproject.toml  render-start.sh
aurus_reasoning/src/aurus_reasoning/: aurus_reasoning.py  register.py
aurus_reasoning/src/aurus_reasoning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aurus_reasoning/src/aurus_reasoning/configs/: config.yml
auth-server/: .env  .gitignore  check_db.js  package-lock.json  package.json  server.js
auth-server/models/: Message.js  Report.js  User.js
auth-server/routes/: auth.js  messages.js  reports.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/auth/: LoginPage.jsx  OnboardingPage.jsx  RouteGuards.jsx  SignupPage.jsx
frontend/src/components/dashboard/: AISupportPage.jsx  ActivityFeed.jsx  AdvocateModal.jsx  AegisOverlay.jsx  AnatomySection.jsx  AppointmentsPage.jsx  CalendarPage.jsx  CalendarView.jsx  ChatPage.jsx  DeviceConnectionModal.jsx  DoctorChat.jsx  DoctorSnapshotModal.jsx  FlarePredictor.jsx  HealthDetective.jsx  HealthStatusCard.jsx  JournalingInput.jsx  SettingsPage.jsx  SimpleAppointmentCard.jsx  SnowParticles.jsx  StatisticsPage.jsx  UpcomingSchedule.jsx  VagalToneWidget.jsx
frontend/src/context/: AppointmentsContext.jsx  AuthContext.jsx  DoctorContext.jsx  HistoryContext.jsx
frontend/src/data/: appointments.js  doctorData.js  healthMetrics.js  mockData.js
frontend/src/hooks/: useAegisTelemetry.js
(+6 files in other folders)
